[tool.poetry]
name = "repl_python3_100-days-of-python"
version = "0.1.0"
description = ""
authors = ["prajjwalsubedi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
